<resources>
    <string name="app_name">Parabank</string>

    <string name="global_action_okay">Okay</string>
    <string name="global_action_cancel">Cancel</string>
    <string name="global_action_yes">Yes</string>
    <string name="global_action_no">No</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>

    <string name="example_username">john</string>
    <string name="example_password">demo</string>

    <string name="global_authors">Parasoft</string>

    <string name="login_action_login">Login</string>

    <string name="dialog_login_load_title">Logging in</string>
    <string name="dialog_login_load">Validating user authentication&#8230;</string>

    <string name="host">Host:</string>
    <string name="port">Port:</string>
    <string name="apply">Apply</string>

    <string name="example_protocol">http://</string>
    <string name="example_host">parabank.parasoft.com</string>
    <string name="example_port">80</string>

    <string name="dialog_login_error_title">Login Failed</string>
    <string name="dialog_login_error">Sorry, either your username or password was incorrect.</string>

    <string name="login_welcome_back">Hello %1$s, welcome back!</string>

    <string name="account_info">User Information</string>

    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="ssn">SSN:</string>
    <string name="street">Street Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zipCode">Zip Code:</string>

    <string name="example_firstName">John</string>
    <string name="example_lastName">Smith</string>
    <string name="example_phoneNumber">111-222-3333</string>
    <string name="example_ssn">111-22-3333</string>
    <string name="example_street">123 Main St.</string>
    <string name="example_city">Beverly Hills</string>
    <string name="example_state">CA</string>
    <string name="example_zipCode">90210</string>

    <string name="updating_contact_info">Updating Server</string>

    <string name="dialog_update_account_info_failed_title">Failed to Update Account Info</string>
    <string name="dialog_update_account_info_failed">There was an issue contacting the server.</string>

    <string name="unchanged">(unchanged)</string>
</resources>
