<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
>
<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:baselineAligned="false"
	android:background="@color/parabank_background"
>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Parabank Logo"
        android:src="@mipmap/parabank_logo"
    />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@android:color/transparent"
		android:gravity="top|left"
		android:padding="10dp"
	>
		<TextView
			style="@style/style_textview"
			android:text="@string/host"
			android:labelFor="@+id/username"
		/>
		<EditText
			style="@style/style_edittext"
			android:id="@+id/etHost"
            android:hint="@string/example_host"
			android:layout_marginBottom="@dimen/login_component_spacing"
		/>
		<TextView
			style="@style/style_textview"
			android:text="@string/port"
			android:labelFor="@+id/etPort"
		/>
		<EditText
			style="@style/style_edittext"
			android:id="@+id/etPort"
            android:hint="@string/example_port"
            android:inputType="number"
			android:layout_marginBottom="@dimen/login_component_spacing"
		/>
		<Button
			style="@style/style_button"
			android:id="@+id/btnApply"
			android:text="@string/apply"
			android:textColor="@color/white"
		/>
	</LinearLayout>
</LinearLayout>
</ScrollView>