<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:baselineAligned="false"
	android:background="@color/parabank_background"
>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="Parabank Logo"
        android:src="@mipmap/parabank_logo"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:gravity="top|left"
            android:padding="10dp"
        >
            <TextView
                style="@style/style_textview"
                android:text="@string/firstName"
                android:labelFor="@+id/etFirstName"
            />
            <EditText
                style="@style/style_edittext"
                android:hint="@string/example_firstName"
                android:id="@+id/etFirstName"
                android:inputType="textPersonName"
                android:layout_marginBottom="@dimen/login_component_spacing"
            />

            <TextView
                style="@style/style_textview"
                android:text="@string/lastName"
                android:labelFor="@+id/etLastName"
               />
            <EditText
                style="@style/style_edittext"
                android:hint="@string/example_lastName"
                android:id="@+id/etLastName"
                android:inputType="textPersonName"
                android:layout_marginBottom="@dimen/login_component_spacing"
            />

            <TextView
                style="@style/style_textview"
                android:text="@string/phoneNumber"
                android:labelFor="@+id/etPhoneNumber"
               />
            <EditText
                style="@style/style_edittext"
                android:hint="@string/example_phoneNumber"
                android:id="@+id/etPhoneNumber"
                android:inputType="phone"
                android:layout_marginBottom="@dimen/login_component_spacing"
            />

            <TextView
                style="@style/style_textview"
                android:text="@string/ssn"
                android:labelFor="@+id/etSSN"
               />
            <EditText
                style="@style/style_edittext"
                android:hint="@string/example_ssn"
                android:id="@+id/etSSN"
                android:inputType="number"
                android:layout_marginBottom="@dimen/login_component_spacing"
            />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/parasoft_blue"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:background="@android:color/transparent"
        android:padding="5dp"
        >
        <ImageButton
            style="@style/style_imagebutton"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:scaleType="fitXY"
            android:id="@+id/btnRejectChanges"
            android:src="@mipmap/ic_action_cancel"
            />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
        <ImageButton
            style="@style/style_imagebutton"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:scaleType="fitXY"
            android:id="@+id/btnAcceptChanges"
            android:src="@mipmap/ic_action_accept"
            />
    </LinearLayout>
</LinearLayout>

