<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@color/parabank_background"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:gravity="top|left"
            android:padding="10dp"
        >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Parabank Logo"
                android:src="@drawable/parabank_logo"
                />
            <TextView
                style="@style/style_textview"
                android:text="@string/username"
                android:labelFor="@+id/etUsername"
            />
            <EditText
                style="@style/style_edittext_username"
                android:id="@+id/etUsername"
                android:layout_marginBottom="@dimen/login_component_spacing"
            />
            <TextView
                style="@style/style_textview"
                android:text="@string/password"
                android:labelFor="@+id/etPassword"
               />
            <EditText
                style="@style/style_edittext_password"
                android:id="@+id/etPassword"
                android:layout_marginBottom="@dimen/login_component_spacing"
            />
            <Button
                style="@style/style_button"
                android:id="@+id/btnLogin"
                android:text="@string/login_action_login"
                android:textColor="@color/white"
            />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/parasoft_blue"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:background="@android:color/transparent"
        android:padding="5dp"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
        <ImageButton
            style="@style/style_imagebutton"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:scaleType="fitXY"
            android:id="@+id/btnConnectionSettings"
            android:src="@mipmap/ic_action_settings"
            />
    </LinearLayout>
</LinearLayout>